--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="text/javascript" src="/Src/main.js"></script>
+    <script type="module" src="/Src/main.js"></script>
     
   </body>
 </html>
